--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   backend:
-    build: ./Dentappointment-back
+    build: ./back
     command: >
       sh -c "python manage.py makemigrations &&
              python manage.py migrate &&
@@ -17,7 +17,7 @@ services:
              python manage.py initadmin &&
              python manage.py runserver 0.0.0.0:8000"
     volumes:
-      - ./Dentappointment-back:/code
+      - ./back:/code
       - ./media:/app/media
     ports:
       - "8000:8000"
@@ -34,9 +34,9 @@ services:
       DB_PORT: 5432
 
   frontend:
-    build: ./appointment-front
+    build: ./front
     volumes:
-      - ./appointment-front:/app
+      - ./front:/app
     ports:
       - "8080:8080"
 
