--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,10 +1,12 @@
+version: "3.8"
+
 services:
   backend:
     build:
       context: ./back
     container_name: backend
     command:
-      ["gunicorn", "--bind", "0.0.0.0:8000", "my_project.wsgi:application"]
+      ["gunicorn", "--bind", "0.0.0.0:8000", "dentappointment.wsgi:application"]
     volumes:
       - ./back:/code
     ports:
@@ -49,3 +51,6 @@ services:
 networks:
   backend-network:
   frontend-network:
+
+volumes:
+  postgres_data:
