--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -48,6 +48,22 @@ services:
     networks:
       - backend-network
 
+  nginx:
+    build:
+      context: ./nginx
+    container_name: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/html:/usr/share/nginx/html
+    depends_on:
+      - backend
+      - frontend
+    networks:
+      - backend-network
+      - frontend-network
+
 networks:
   backend-network:
   frontend-network:
