[Update] nginx config modified

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-
+    server_name citassalud.com.mx www.citassalud.com.mx;
     location / {
         proxy_pass http://frontend:8080;
         proxy_set_header Host $host;
