--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,6 +4,7 @@ services:
   backend:
     build:
       context: ./back
+      dockerfile: Dockerfile.prod
     container_name: backend
     command:
       ["gunicorn", "--bind", "0.0.0.0:8000", "dentappointment.wsgi:application"]
