--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,10 +6,16 @@ services:
       context: ./back
       dockerfile: Dockerfile.prod
     container_name: backend
-    command:
-      ["gunicorn", "--bind", "0.0.0.0:8000", "dentappointment.wsgi:application"]
+    command: >
+      sh -c "python manage.py makemigrations &&
+             python manage.py migrate &&
+             python manage.py collectstatic --no-input&&
+             python manage.py initadmin &&
+             gunicorn --bind 0.0.0.0:8000 dentappointment.wsgi:application"
+
     volumes:
       - ./back:/code
+      - ./media:/app/media
     ports:
       - "8000:8000"
     depends_on:
