--- a/back/Dockerfile.prod
+++ b/back/Dockerfile.prod
@@ -1,5 +1,5 @@
 # Use a smaller base image for production
-FROM python:3.9-slim
+FROM python:3.9
 
 WORKDIR /app
 
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY requirements.txt .
 
 # Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 # Copy the rest of the application code
 COPY . .
