--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,13 +6,6 @@ services:
       context: ./back
       dockerfile: Dockerfile.prod
     container_name: backend
-    command: >
-      sh -c "python manage.py makemigrations &&
-             python manage.py migrate &&
-             python manage.py collectstatic --no-input&&
-             python manage.py initadmin &&
-             gunicorn --bind 0.0.0.0:8000 dentappointment.wsgi:application"
-
     volumes:
       - ./back:/code
       - ./media:/app/media
@@ -27,6 +20,14 @@ services:
       - DB_USER=crentist
       - DB_PASSWORD=tesca123
       - DB_PORT=5432
+    command: >
+      sh -c "
+      python manage.py makemigrations &&
+      python manage.py migrate &&
+      python manage.py collectstatic --no-input &&
+      python manage.py initadmin &&
+      gunicorn --bind 0.0.0.0:8000 dentappointment.wsgi:application
+      "
     networks:
       - backend-network
 
