[Update] config just for nginx

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -5,7 +5,7 @@ FROM nginx:1.26.0
 COPY conf.d/default.conf /etc/nginx/conf.d/
 
 # Copy website content to the container (optional)
-# COPY html/ /usr/share/nginx/html/
+COPY html /usr/share/nginx/html
 
 # Expose port 80
 EXPOSE 80
