--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,6 +1,11 @@
 server {
     listen 80;
     server_name citassalud.com.mx www.citassalud.com.mx;
+    
+    if ($host !~* ^(citassalud\.com\.mx|www\.citassalud\.com\.mx)$ ) {
+        return 301 http://citassalud.com.mx$request_uri;
+    }
+
     location / {
         proxy_pass http://frontend:8080;
         proxy_set_header Host $host;
