--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -26,7 +26,7 @@ services:
              python manage.py migrate &&
              python manage.py collectstatic --no-input&&
              python manage.py initadmin &&
-             python manage.py runserver 0.0.0.0:8000"
+             gunicorn --bind 0.0.0.0:8000 dentappointment.wsgi:application"
     networks:
       - backend-network
 
