[Update] nginx config

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,9 +2,9 @@ server {
     listen 80;
     server_name citassalud.com.mx www.citassalud.com.mx;
     
-    if ($host !~* ^(citassalud\.com\.mx|www\.citassalud\.com\.mx)$ ) {
-        return 301 http://citassalud.com.mx$request_uri;
-    }
+    # if ($host !~* ^(citassalud\.com\.mx|www\.citassalud\.com\.mx)$ ) {
+    #     return 301 http://citassalud.com.mx$request_uri;
+    # }
 
     location / {
         proxy_pass http://frontend:8080;
