--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     depends_on:
       - db
     environment:
-      SITE_URL: "http://citassalud.com.mx"
+      SITE_URL: "http://localhost:8080"
       SECRET_KEY: django-insecure-kjgjj%wa2i=z&t+=m400r-9h(bqrxd+23kjt*&y&kk6=i4%ebr
       DB_NAME: dentapp
       DB_USER: crentist
