[Update] CORS_ALLOWED_ORIGINS

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,10 +1,15 @@
 server {
     listen 80;
     server_name citassalud.com.mx www.citassalud.com.mx;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name citassalud.com.mx www.citassalud.com.mx;
     
-    # if ($host !~* ^(citassalud\.com\.mx|www\.citassalud\.com\.mx)$ ) {
-    #     return 301 http://citassalud.com.mx$request_uri;
-    # }
+    ssl_certificate /etc/letsencrypt/live/citassalud.com.mx/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/citassalud.com.mx/privkey.pem;
 
     location / {
         proxy_pass http://frontend:8080;
