--- a/front/Dockerfile.prod
+++ b/front/Dockerfile.prod
@@ -1,5 +1,5 @@
 # Use an official Node.js runtime as a parent image
-FROM node:16-alpine
+FROM node:16-alpine as build
 
 # Set the working directory in the container
 WORKDIR /app
@@ -16,8 +16,9 @@ COPY . .
 # Build the application
 RUN yarn build
 
-# Expose the port the app runs on
-EXPOSE 8080
-
-# Command to run the application
-CMD ["yarn", "serve"]
+RUN  apt-get update \
+  && apt-get install -y wget \
+  && rm -rf /var/lib/apt/lists/*
+RUN rm -rf /usr/share/nginx/html/*
+COPY --from=build /app/nginx/nginx.conf /etc/nginx/conf.d/default.conf:ro
+COPY --from=build /app/dist /usr/share/nginx/html
