--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,12 +2,10 @@ server {
     listen 80;
     server_name citassalud.com.mx www.citassalud.com.mx;
     
-    location / {
-        proxy_pass http://frontend:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+     location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
 
     location /api {
