--- a/front/Dockerfile.prod
+++ b/front/Dockerfile.prod
@@ -1,24 +1,22 @@
-# Use an official Node.js runtime as a parent image
-FROM node:16-alpine as build
+# Stage 1: Build the Vue.js app
+FROM node:16-alpine as build-stage
 
-# Set the working directory in the container
 WORKDIR /app
 
-# Copy package.json and yarn.lock to the working directory
 COPY package.json yarn.lock ./
-
-# Install project dependencies using Yarn
 RUN yarn install
 
-# Copy the rest of the application code to the working directory
-COPY . .
-
-# Build the application
+COPY . ./
 RUN yarn build
 
-RUN  apt-get update \
-  && apt-get install -y wget \
-  && rm -rf /var/lib/apt/lists/*
-RUN rm -rf /usr/share/nginx/html/*
-COPY --from=build /app/nginx/nginx.conf /etc/nginx/conf.d/default.conf:ro
-COPY --from=build /app/dist /usr/share/nginx/html
+# Stage 2: Serve the app with Nginx
+FROM nginx:alpine as production-stage
+
+COPY --from=build-stage /app/dist /usr/share/nginx/html
+
+# Copy custom Nginx configuration
+COPY nginx.conf /etc/nginx/nginx.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
