--- a/back/Dockerfile.prod
+++ b/back/Dockerfile.prod
@@ -19,4 +19,4 @@ ENV PYTHONUNBUFFERED=1
 EXPOSE 8000
 
 # Use gunicorn to run the Django application
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "dentappointment.wsgi:application"]
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "dentappointment.wsgi"]
