--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,14 +1,13 @@
 server {
     listen 80;
     server_name citassalud.com.mx www.citassalud.com.mx;
-    
-     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+
+    location / {
+        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
     }
 
-    location /api {
+    location /api/ {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -16,16 +15,24 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-     location /static/ {
-        alias /app/staticfiles/;
-    }
-
     location /media/ {
         alias /app/media/;
     }
 
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+    location /static/ {
+        alias /app/staticfiles/;
+    }
+
+    # Additional configurations for Django
+    location /admin/ {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /static/admin/ {
+        alias /usr/local/lib/python3.9/site-packages/django/contrib/admin/static/admin/;
     }
 }
