--- a/front/Dockerfile.prod
+++ b/front/Dockerfile.prod
@@ -1,21 +1,17 @@
-# Stage 1: Build the Vue.js app
+# Stage 1: Build Vue.js app
 FROM node:16-alpine as build-stage
 
 WORKDIR /app
 
 COPY package.json yarn.lock ./
 RUN yarn install
-
-COPY . ./
+COPY . .
 RUN yarn build
 
-# Stage 2: Serve the app with Nginx
-FROM nginx:alpine as production-stage
+# Stage 2: Serve Vue.js app with Nginx
+FROM nginx:alpine
 
 COPY --from=build-stage /app/dist /usr/share/nginx/html
-
-# Copy custom Nginx configuration
-COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 
