--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,9 @@
 # Use the official Nginx image from the Docker Hub
 FROM nginx:1.26.0
 
+RUN chown -R nginx:nginx /usr/share/nginx/html
+RUN chmod -R 755 /usr/share/nginx/html
+
 # Copy the custom Nginx configuration file to the container
 COPY conf.d/default.conf /etc/nginx/conf.d/
 
