--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -31,17 +31,17 @@ services:
     networks:
       - backend-network
 
-  # frontend:
-  #   build:
-  #     context: ./front
-  #     dockerfile: Dockerfile.prod
-  #   container_name: frontend
-  #   volumes:
-  #     - ./front:/app
-  #   networks:
-  #     - frontend-network
-  #     - backend-network
-  #   restart: always
+  frontend:
+    build:
+      context: ./front
+      dockerfile: Dockerfile.prod
+    container_name: frontend
+    volumes:
+      - ./front:/app
+    networks:
+      - frontend-network
+      - backend-network
+    restart: always
 
   db:
     image: postgres:16
