--- a/back/.gitignore
+++ b/back/.gitignore
@@ -4,10 +4,12 @@
 .DS_Store
 .AppleDouble
 .LSOverride
-
+staticfiles/
+migrations/
 # Icon must end with two \r
 Icon
-
+Pipfile
+Pipfile.lock
 
 # Thumbnails
 ._*
