--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/font": "^7.3.67",
     "axios": "1.5.1",
+    "dotenv": "^16.4.5",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "2.7.1",
